# Simple2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
app/: App.cpp  App.h  app.cpp  app.h  controls.cpp  learn.cpp  loader.cpp  loader.h  main.cpp  map.cpp  menu.cpp  physics.cpp  physics.h  platform.mm  stdafx.h  version.cpp
common/: bgfx_utils.cpp  bgfx_utils.h  camera.cpp  camera.h  cube_atlas.h  example-glue.cpp  ffmpeg-pipe.h
common/debugdraw/: debugdraw.cpp
common/entry/: cmd.cpp  dbg.h  dialog.cpp  dialog.h  entry.cpp  entry.h  entry_android.cpp  entry_glfw.cpp  entry_html5.cpp  entry_ios.mm  entry_osx.mm  entry_p.h  entry_sdl.cpp  entry_sdl3.cpp  entry_sdl3.mm  entry_windows.cpp  entry_x11.cpp  input.cpp  input.h
common/font/: font_manager.cpp
common/imgui/: imgui.cpp  imgui.h
common/nanovg/: fontstash.h  nanovg.h  nanovg_bgfx.h
core/: Camera.cpp  Camera.h
engine/: Camera.cpp  Camera.h  Geometry.h  Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Object3d.cpp  Object3d.h  Scene.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
geometries/: BoxGeometry.cpp  CapsuleGeometry.cpp  ConeGeometry.cpp  CylinderGeometry.cpp  DodecahedronGeometry.cpp  Geometry.h  IcosahedronGeometry.cpp  OctahedronGeometry.cpp  PlaneGeometry.cpp  PolyhedronGeometry.cpp  SphereGeometry.cpp  TetrahedronGeometry.cpp  TorusGeometry.cpp  TorusKnotGeometry.cpp
loaders/: MeshLoader.cpp  ModelLoader.cpp  ModelLoader.h  loader.cpp
objects/: Mesh.cpp  Mesh.h  Object3d.cpp  Object3d.h
physics/: Body.cpp  Body.h  PhysicsWorld.cpp  PhysicsWorld.h
scenes/: Scene.h  map.cpp
shaders/: bgfx_shader.sh  common.sh  fs_base.sc  fs_cube.sc  fs_cursor.sc  fs_cursor_instance.sc  fs_instance.sc  fs_instancing.sc  fs_mesh.sc  fs_model.sc  fs_model_color.sc  fs_model_instance.sc  fs_model_texture.sc  fs_model_texture_instance.sc  fs_model_texture_normal.sc  fs_model_texture_tangent.sc  fs_pbr.sc  fs_rubik.sc  shaderlib.sh  varying.def.sc  vs_base.sc  vs_cube.sc  vs_cursor.sc  vs_cursor_instance.sc  vs_instance.sc  vs_instancing.sc  vs_mesh.sc  vs_model.sc  vs_model_color.sc  vs_model_instance.sc  vs_model_texture.sc  vs_model_texture_instance.sc  vs_model_texture_normal.sc  vs_model_texture_tangent.sc  vs_pbr.sc  vs_rubik.sc
src/app/: App.cpp  App.h  controls.cpp  learn.cpp  stdafx.h  version.cpp
src/common/: aviwriter.h  bgfx_utils.cpp  bgfx_utils.h  camera.cpp  config.h  example-glue.cpp  ffmpeg-pipe.h
src/common/entry/: cmd.cpp  dbg.h  entry.cpp  entry.h  entry_android.cpp  entry_glfw.cpp  entry_html5.cpp  entry_osx.mm  entry_p.h  entry_sdl.cpp  entry_sdl3.cpp  entry_windows.cpp  entry_x11.cpp  input.cpp  input.h
src/common/imgui/: imgui.cpp  makefile
src/common/nanovg/: nanovg.h
src/core/: Camera.cpp  Camera.h  ShaderManager.cpp  ShaderManager.h  common3d.cpp  common3d.h
src/geometries/: BoxGeometry.cpp  CapsuleGeometry.cpp  ConeGeometry.cpp  CylinderGeometry.cpp  DodecahedronGeometry.cpp  Geometry.cpp  Geometry.h  IcosahedronGeometry.cpp  OctahedronGeometry.cpp  PlaneGeometry.cpp  PolyhedronGeometry.cpp  SphereGeometry.cpp  TetrahedronGeometry.cpp  TorusGeometry.cpp  TorusKnotGeometry.cpp
src/loaders/: BgfxLoader.cpp  FbxLoader.cpp  GltfLoader.cpp  MeshLoader.cpp  MeshLoader.h  loader.cpp  loader.h  writer.h
src/materials/: Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  ShaderManager.cpp  ShaderManager.h
src/objects/: Mesh.cpp  Mesh.h  Object3d.cpp  Object3d.h  RubikCube.cpp  RubikCube.h
src/physics/: Body.cpp  Body.h  PhysicsWorld.cpp  PhysicsWorld.h
src/scenes/: Scene.cpp  Scene.h  map.cpp
src/textures/: TextureManager.cpp  TextureManager.h
src/ui/: ControlsWindow.cpp  EngineSettings.cpp  LogWindow.cpp  MapWindow.cpp  ObjectWindow.cpp  SceneWindow.cpp  SettingsWindow.cpp  ThemeWindow.cpp  game-settings.h  ui-common.cpp  ui-fx.cpp  ui-fx.h  ui-log.cpp  ui-menu.cpp  ui-settings.cpp  ui-theme.cpp  ui.cpp  ui.h  xsettings.cpp  xsettings.h
src/ui/fx/: fx-Align4.cpp  fx-Arkanoid.cpp  fx-Basket.cpp  fx-Boids.cpp  fx-Bounce.cpp  fx-Boxes.cpp  fx-Chess.cpp  fx-Circles.cpp  fx-Eyes.cpp  fx-Fire.cpp  fx-GravityDisk.cpp  fx-Green.cpp  fx-Landscape.cpp  fx-Loading.cpp  fx-Mandelbrot.cpp  fx-Oxo.cpp  fx-PacMan.cpp  fx-RaceTrack.cpp  fx-RainDrops.cpp  fx-Snake.cpp  fx-Tetris.cpp  fx-Tunnel.cpp
textures/: TextureManager.cpp  TextureManager.h
ui/: EngineSettings.cpp  EngineSettings.h  engine-settings.cpp  engine-settings.h  game-config.inl  game-settings.h  game-settings.inl  menu.cpp  ui-common.cpp  ui-controls.cpp  ui-log.cpp  ui-menu.cpp  ui-settings.cpp  ui-theme.cpp  ui.cpp  ui.h  xsettings.cpp  xsettings.h
